Fixed dropdown label alignment

--- a/src/content/panorama/styles/custom_game/cheats.css
+++ b/src/content/panorama/styles/custom_game/cheats.css
@@ -185,3 +185,9 @@
 	margin-left: 8px;
 	background-image: url("file://{images}/custom_game/commandIcon.png");
 }
+
+DropDown Label {
+	vertical-align: middle;
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
